--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div>
                 <img src="img/img-mobile.jpg" class="img-fluid main-img-mobile d-none d-sm-block d-lg-none" alt="my picture" />
                 <h6 class="text-uppercase open-sans-font mb-0 d-block d-sm-none d-lg-block">hi there !</h6>
-                <h1 class="text-uppercase poppins-font"><span>I'm</span> steve milner</h1>
+                <h1 class="text-uppercase poppins-font"><span>I'm</span> Rajeshwar Goswami</h1>
                 <p class="open-sans-font">I'm a Tunisian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
                 <a href="about.html" class="btn btn-about">more about me</a>
             </div>
